--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "8.3.0",
+    "node": "8.4.0",
     "npm": "5.3.0"
   },
   "scripts": {
@@ -19,6 +19,8 @@
     "mongoose": "^4.11.7",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "react": "^16.0.0-beta.5",
+    "react-dom": "^16.0.0-beta.5"
   }
 }
